fix: cron untuk otomatisasi
