# public/openapi.json
@@ -29,6 +29,62 @@
         ]
       }
     },
+    "/weather/fetch-now": {
+      "get": {
+        "operationId": "WeatherController_getSaveWeather",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Weather"
+        ]
+      }
+    },
+    "/weather/aggregate/minute": {
+      "get": {
+        "operationId": "WeatherController_aggregateMinute",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Weather"
+        ]
+      }
+    },
+    "/weather/aggregate/hour": {
+      "get": {
+        "operationId": "WeatherController_aggregateHour",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Weather"
+        ]
+      }
+    },
+    "/weather/aggregate/day": {
+      "get": {
+        "operationId": "WeatherController_aggregateDay",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Weather"
+        ]
+      }
+    },
     "/weather-analytics/basic-stats": {
       "get": {
         "operationId": "WeatheranalyticsController_getStats",
